added sensor functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ add_executable(ACC
         Sensor/Sensor.h
         Sensor/LiDAR.cpp
         Sensor/LiDAR.h
-        Utility/globals.h Utility/globals.cpp)
+        Utility/globals.h
+        Utility/globals.cpp)
 
 # Link the json library
 target_link_libraries(ACC PRIVATE nlohmann_json::nlohmann_json)
